G/tests/fail/void_let.g
// Gán kết quả hàm void cho biến.
fn nothing() { }
fn main() -> int {
    let x = nothing()
    return 0
}
